# naviterm

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  patch
src/: app.rs  constants.rs  dbus.rs  event.rs  handler.rs  lib.rs  main.rs  mappings.rs  music_database.rs  parser.rs  player_data.rs  server.rs  tui.rs  ui.rs
src/model/: album.rs  artist.rs  connection_status.rs  mod.rs  playlist.rs  song.rs  subsonic_album.rs  subsonic_common.rs  subsonic_genre.rs  subsonic_playlist.rs  subsonic_song.rs
src/parser/: model.rs
src/player/: ipc.rs  mod.rs  mpv.rs  parser.rs
src/server/: async_operation.rs  json_parser.rs  mod.rs  parser.rs  server.rs  xml_parser.rs
src/ui/: footer_now_playing.rs  interface.rs  mod.rs  popup_add_to.rs  popup_album_info.rs  popup_connection_error.rs  popup_connection_test.rs  popup_deletion_playlist.rs  popup_error_message.rs  popup_genre_filter.rs  popup_global_search.rs  popup_keybindings.rs  popup_select_playlist.rs  popup_synchronize_playlist.rs  popup_update.rs  popup_year_filter.rs  tab_albums.rs  tab_artists.rs  tab_home.rs  tab_playlists.rs  tab_queue.rs  tabs.rs  utils.rs
