[package]
name = "naviterm"
version = "0.5.0"
authors = ["Jaime Pando Acedo <jaime@jpandoac.es>"]
license = "GLPv3"
edition = "2021"

[dependencies]
chrono = "0.4.38"
config = { version = "0.14.0", features = ["ini"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
md5 = "0.7.0"
minidom = "0.15.2"
rand = "0.8.5"
ratatui = "0.27.0"
reqwest = "0.12.4"
tokio = { version = "1.35.1", features = ["full"] }
dirs = "5.0.1"
encoding = "0.2.33"
json = "0.12.4"
log = "0.4.22"
log4rs = "1.3.0"
num-traits = "0.2.19"
unicode-segmentation = "1.10.1"
zbus = "4.4.0"
serde = "1.0.210"
bincode = "1.3.3"
which = "7.0.3"
regex = "1.11.1"
secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
