[package]
name = "naviterm"
version = "0.5.1"
authors = ["Jaime Pando Acedo <jaime@jpandoac.es>"]
license = "GLPv3"
edition = "2021"

[dependencies]
chrono = "0.4.42"
config = { version = "0.15.19", features = ["ini"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
md5 = "0.8.0"
minidom = "0.15.2"
rand = "0.8.5"
ratatui = "0.29.0"
reqwest = "0.12.26"
tokio = { version = "1.48.0", features = ["full"] }
dirs = "6.0.0"
encoding = "0.2.33"
json = "0.12.4"
log = "0.4.29"
log4rs = "1.4.0"
num-traits = "0.2.19"
unicode-segmentation = "1.12.0"
zbus = "4.4.0"
serde = "1.0.228"
bincode = "1.3.3"
which = "8.0.0"
regex = "1.12.2"
secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
rpassword = "7.4.0"
